5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4414/executions/1712_2506.log
== SUBMITION (2019-05-15 07:57:04) 
-- CODE:
qi=int(input("peixe:"))
pc=float(input("crescimento:"))
qv=int(input("vendas:"))

c=0
while(qi<1200 and q1>0):
	qi=qi+((qi*pc)/100)- qv
	c=c+1
	
if(qi>=12000):
	print("LIMITE")
else:
	print("EXTINÇÃO")
	
print(c)	
	
-- EXECUTION TIME:
0.133226
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1712/2506/main.py", line 13, in <module>
    print("EXTIN\xc7\xc3O")
UnicodeEncodeError: 'ascii' codec can't encode characters in position 5-6: ordinal not in range(128)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 07:57:06) 
-- CODE:
qi=int(input("peixe:"))
pc=float(input("crescimento:"))
qv=int(input("vendas:"))

c=0
while(qi<1200 and q1>0):
	qi=qi+((qi*pc)/100)- qv
	c=c+1
	
if(qi>=12000):
	print("LIMITE")
else:
	print("EXTINÇÃO")
	
print(c)	
	
-- OUTPUT:
EXTINÇÃO
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 07:57:45) 
-- CODE:
qi=int(input("peixe:"))
pc=float(input("crescimento:"))
qv=int(input("vendas:"))

c=0
while(qi<1200 and q1>0):
	qi=qi+((qi*pc)/100)- qv
	c=c+1
	
if(qi>=12000):
	print("LIMITE")
else:
	print("EXTINÇAO")
	
print(c)	
	
-- EXECUTION TIME:
0.174267
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1712/2506/main.py", line 13, in <module>
    print("EXTIN\xc7AO")
UnicodeEncodeError: 'ascii' codec can't encode character '\xc7' in position 5: ordinal not in range(128)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 07:57:47) 
-- CODE:
qi=int(input("peixe:"))
pc=float(input("crescimento:"))
qv=int(input("vendas:"))

c=0
while(qi<1200 and q1>0):
	qi=qi+((qi*pc)/100)- qv
	c=c+1
	
if(qi>=12000):
	print("LIMITE")
else:
	print("EXTINÇAO")
	
print(c)	
	
-- OUTPUT:
EXTINÇAO
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 07:58:17) 
-- CODE:
qi=int(input("peixe:"))
pc=float(input("crescimento:"))
qv=int(input("vendas:"))

c=0
while(qi<1200 and q1>0):
	qi=qi+((qi*pc)/100)- qv
	c=c+1
	
if(qi>=12000):
	print("LIMITE")
else:
	print("EXTINCAO")
	
print(c)	
	
-- EXECUTION TIME:
0.187248
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
EXTINCAO
0
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:

-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
EXTINCAO
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 07:58:18) 
-- CODE:
qi=int(input("peixe:"))
pc=float(input("crescimento:"))
qv=int(input("vendas:"))

c=0
while(qi<1200 and q1>0):
	qi=qi+((qi*pc)/100)- qv
	c=c+1
	
if(qi>=12000):
	print("LIMITE")
else:
	print("EXTINCAO")
	
print(c)	
	
-- OUTPUT:
EXTINCAO
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 07:59:31) 
-- CODE:
qi=int(input("peixe:"))
pc=float(input("crescimento:"))
qv=int(input("vendas:"))

c=0
while(qi<12000 and q1>0):
	qi=qi+((qi*pc)/100)- qv
	c=c+1
	
if(qi>=12000):
	print("LIMITE")
else:
	print("EXTINCAO")
	
print(c)	
	
-- EXECUTION TIME:
0.176213
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1712/2506/main.py", line 6, in <module>
    while(qi<12000 and q1>0):
NameError: name 'q1' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 07:59:33) 
-- CODE:
qi=int(input("peixe:"))
pc=float(input("crescimento:"))
qv=int(input("vendas:"))

c=0
while(qi<12000 and q1>0):
	qi=qi+((qi*pc)/100)- qv
	c=c+1
	
if(qi>=12000):
	print("LIMITE")
else:
	print("EXTINCAO")
	
print(c)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    while(qi<12000 and q1>0):
NameError: name 'q1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 07:59:56) 
-- CODE:
qi=int(input("peixe:"))
pc=float(input("crescimento:"))
qv=int(input("vendas:"))

c=0
while(qi<12000 and qi>0):
	qi=qi+((qi*pc)/100)- qv
	c=c+1
	
if(qi>=12000):
	print("LIMITE")
else:
	print("EXTINCAO")
	
print(c)	
	
-- EXECUTION TIME:
0.129144
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
EXTINCAO
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
